add rosary days
