# functions/api/day/[date].ts
@@ -1,7 +1,7 @@
-import { DayResponse, LiturgicalRecord, RosarySeries } from '../../src/ts/datatypes'
-import { getCheckTime, getResponseHeaders, returnError } from '../../src/ts/http'
-import { getCurrentRosarySeries } from '../../src/ts/rosary'
-import { getCurrentSeason } from '../../src/ts/season'
+import { DayResponse, LiturgicalRecord, RosarySeries } from '../../../src/ts/datatypes'
+import { getCheckTime, getResponseHeaders, returnError } from '../../../src/ts/http'
+import { getCurrentRosarySeries } from '../../../src/ts/rosary'
+import { getCurrentSeason } from '../../../src/ts/season'
 
 /**
  * Handle get requests.
@@ -12,13 +12,11 @@ import { getCurrentSeason } from '../../src/ts/season'
  */
 export const onRequestGet = async function (context: any): Promise<Response> {
   try {
-    const { searchParams } = new URL(context.request.url)
-    const timestamp = searchParams.get('timestamp') ?? ''
-    const date = searchParams.get('date') ?? ''
-    const check = getCheckTime(timestamp, date)
+    const date = context.params.date ?? ''
+    const check = getCheckTime(date)
     const season: LiturgicalRecord = getCurrentSeason(check)
     const rosarySeries: RosarySeries = getCurrentRosarySeries(check)
-    const response: DayResponse = getDayResponse(check, season, rosarySeries)
+    const response: DayResponse = getDayResponse(date, season, rosarySeries)
     return new Response(JSON.stringify(response), {
       headers: getResponseHeaders(),
       status: 200
@@ -31,15 +29,15 @@ export const onRequestGet = async function (context: any): Promise<Response> {
 /**
  * Get the response object for valid requests.
  *
- * @param {number}           check        The check timestamp
+ * @param {string}           date         The check date
  * @param {LiturgicalRecord} season       The liturgical season record
  * @param {RosarySeries}     rosarySeries The rosary series
  *
  * @returns {DayResponse}
  */
-const getDayResponse = (check: number, season: LiturgicalRecord, rosarySeries: RosarySeries): DayResponse => {
+const getDayResponse = (date: string, season: LiturgicalRecord, rosarySeries: RosarySeries): DayResponse => {
   const response: DayResponse = {
-    timestamp: check,
+    date: date,
     season: season.season,
     'sunday-cycle': season['sunday-cycle'],
     'weekday-cycle': season['weekday-cycle'],
